--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,31 +9,44 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Required. See https://goreleaser.com/ci/actions/#workflow
 
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
 
-      -
-        name: Get the git tag
+      - name: Get the git tag
         uses: little-core-labs/get-git-tag@v3.0.2
         id: tagName
 
       -
-        name: Run GoReleaser
+        # This step converts the git tag to an upgrade version. Essentially it just replaces plus (+) with dot (.).
+        name: Convert tag to upgrade version
+        id: getUpgradeVersion
+        env:
+          TAG: ${{ steps.tagName.outputs.tag }}
+        run: |
+          UPGRADE_VERSION=$(echo "$TAG" | sed s/\+/\./)
+          echo "::set-output name=result::$UPGRADE_VERSION"
+
+      -
+        name: Echo the upgrade version
+        env:
+          UPGRADE_VERSION: ${{ steps.getUpgradeVersion.outputs.result }}
+        run: |
+          echo Upgrade version is set to: $UPGRADE_VERSION
+
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
           version: latest
           args: release --config ../.goreleaser.yaml --rm-dist
-          workdir: ${{ steps.tagName.outputs.tag }}
+          workdir: ${{ steps.getUpgradeVersion.outputs.result  }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          UPGRADE_VERSION: ${{ steps.tagName.outputs.tag }}
+          UPGRADE_VERSION: ${{ steps.getUpgradeVersion.outputs.result }}
