--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,14 +39,16 @@ jobs:
           UPGRADE_VERSION: ${{ steps.getUpgradeVersion.outputs.result }}
         run: |
           echo Upgrade version is set to: $UPGRADE_VERSION
+          echo Listing upgrade directory:
+          ls -lr upgrades
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
           version: latest
-          args: release --config ../.goreleaser.yaml --rm-dist
-          workdir: ${{ steps.getUpgradeVersion.outputs.result  }}
+          args: release --config ../../.goreleaser.yaml --rm-dist
+          workdir: upgrades/${{ steps.getUpgradeVersion.outputs.result  }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           UPGRADE_VERSION: ${{ steps.getUpgradeVersion.outputs.result }}
