Crosscompile in Docker to ensure correct builds on all platforms
* set CGO_ENABLED to 1. This will make the keychain work on mac

* KM587 🐛 Use explicit compiler for darwin

* KM587 - add Makefile to do releases via crosscompiler inside Docker

* KM587 - use make release instead of goreleaser

* KM587 - don't change into relative dir

* KM5876 - remove snapshot argument

* KM587 - use make release to build

* KM556 - use correct github token

Co-authored-by: Håvard Eide <havard.eide@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,20 +1,29 @@
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 
 # Configuration: https://goreleaser.com/customization/build/
 builds:
-  - env:
-      - CGO_ENABLED=0
+  - id: linux
+    binary: "okctl-upgrade_{{ .Env.UPGRADE_VERSION }}"
+    env:
+      - CGO_ENABLED=1
     goos:
       - linux
+    goarch:
+      - amd64
+  - id: darwin
+    binary: "okctl-upgrade_{{ .Env.UPGRADE_VERSION }}"
+    env:
+      - CGO_ENABLED=1
+      - CC=o64-clang
+      - CXX=o64-clang++
+    goos:
       - darwin
     goarch:
       - amd64
-    binary: "okctl-upgrade_{{ .Env.UPGRADE_VERSION }}"
+
 
 project_name: okctl-upgrade
 
